# study_pyglet

./: README.md
game_prog_nyumon/: .gitignore  README.md  pyproject.toml
game_prog_nyumon/game_prog_nyumon/: crash.py  game.py
game_prog_nyumon/game_prog_nyumon/chapter2/: player1.py  player3.py  player4.py  player5.py
game_prog_nyumon/pyglet_to_kivy/: game.py  keyboard.py  player.kv
game_prog_nyumon/pyglet_to_kivy/chapter2/: player1.py
game_prog_nyumon/pyglet_to_kivy/settings/: __init__.py  keyboard.py
game_prog_nyumon/study_kivy/: show_image.py  show_image_edet.py
